# Stratego

./: README.md
Stratego/src/client/: CMakeLists.txt  Makefile  main.cc  stgclient
Stratego/src/client/libs/: board.cpp  board.h
Stratego/src/common/: board.cc  board.h  piece.cc  piece.h  protocol.cpp  protocol.h
Stratego/src/server/: CMakeLists.txt  Makefile  main.cc  stgserver
